Separate transcript CSS into it’s own file and fix timecode styling on mobile

--- a/source/stylesheets/episodes.scss
+++ b/source/stylesheets/episodes.scss
@@ -54,45 +54,3 @@
   z-index: 100;
   padding: 0.5em;
 }
-
-.transcript.not-available {
-  border: 1px dashed $light-gray;
-  padding: 10vh 2em;
-  text-align: center;
-}
-
-.transcript-message {
-  position: relative;
-  margin: 1em 0;
-
-  .timecode {
-    position: absolute;
-    top: 0;
-    right: calc(100% + 1em);
-    color: $light-gray;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 0.9em;
-
-    a {
-      text-decoration: none;
-    }
-  }
-
-  .speaker {
-    font-weight: bold;
-    display: inline;
-
-    &:after {
-      content: ": ";
-    }
-  }
-
-  .message-content {
-    display: inline;
-  }
-}
-
-.transcript-interstitial {
-  color: $light-gray;
-  margin: 1em 0;
-}
